--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "react-pro-sidebar": "^1.0.0-alpha.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
